dist/manifests/borg-manifests/elasticsearch-exporter/5elasticsearch-exporter.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: p8s-elastic-exporter
  namespace: kube-system
  labels:
    k8s-app: p8s-elastic-exporter
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  # selector:
  #  matchLabels:
  template:
    metadata:
      labels:
        k8s-app: p8s-elastic-exporter

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9108"
        
    spec:
      serviceAccountName: p8s-elastic-exporter
      containers:
      - name: p8s-elastic-exporter
        image: justwatch/elasticsearch_exporter:1.0.1
        # command:
        command:
        - /bin/elasticsearch_exporter
        - -es.uri=http://elasticsearch-logging:9200
        - -es.all=true
        # - -es.timeout=60s
        # - -log.level=debug
        securityContext:
          capabilities:
            drop:
            - SETPCAP
            - MKNOD
            - AUDIT_WRITE
            - CHOWN
            - NET_RAW
            - DAC_OVERRIDE
            - FOWNER
            - FSETID
            - KILL
            - SETGID
            - SETUID
            - NET_BIND_SERVICE
            - SYS_CHROOT
            - SETFCAP
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /health
            port: 9108
          initialDelaySeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 9108
          initialDelaySeconds: 40
          timeoutSeconds: 10

        resources:
          limits:
            cpu: ".2"
            memory: "128Mi"
          requests:
            cpu: "0.05"
            memory: "64Mi"
          

        ports:
        - containerPort: 9108
          name: es-metrics

      # volumes:

      # hostNetwork:

      # hostPID:

      nodeSelector:
        beta.kubernetes.io/os: linux

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000





#      hostNetwork: true
#      hostPID: true
#      nodeSelector:
#        beta.kubernetes.io/os: linux
#      securityContext:
#        runAsNonRoot: true
#        runAsUser: 65534
