dist/manifests/borg-manifests/elasticsearch-exporter/6elasticsearch-exporter.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: p8s-elastic-exporter
  namespace: kube-system
  labels:
    k8s-app: p8s-elastic-exporter
  # annotations:
spec:
  type: ClusterIP
  ports:
    - port: 9108
      targetPort: 9108
      protocol: TCP
      name: es-metrics
  selector:
    k8s-app: p8s-elastic-exporter
