dist/manifests/borg-manifests/elasticsearch-exporter/7elasticsearch-exporter.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-exporter
  namespace: kube-system
  labels:
    k8s-app: p8s-elastic-exporter
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
    - host: elasticsearch-exporter.borglab.scarlettlab.home
      http:
        paths:
        - path: /
          backend:
            serviceName: p8s-elastic-exporter
            servicePort: 9108
    - host: elasticsearch-exporter.hyenaclan.org
      http:
        paths:
        - path: /
          backend:
            serviceName: p8s-elastic-exporter
            servicePort: 9108
